--- a/bundle.yaml
+++ b/bundle.yaml
@@ -33,6 +33,20 @@ applications:
     scale: 1
     resources:
       oai-db-image: mysql:5.5
+  gnb:
+    charm: ./oai-gnb-operator/gnb.charm
+    scale: 1
+    trust: true
+    resources:
+      oai-gnb-image: rdefosseoai/oai-gnb:develop
+      tcpdump-image: corfr/tcpdump:latest
+  nr-ue:
+    charm: ./oai-nr-ue-operator/nr-ue.charm
+    scale: 1
+    trust: true
+    resources:
+      oai-nr-ue-image: rdefosseoai/oai-nr-ue:develop
+      tcpdump-image: corfr/tcpdump:latest
 relations:
   - - db:db
     - amf:db
@@ -44,3 +58,7 @@ relations:
     - amf:amf
   - - nrf:nrf
     - spgwu-tiny:nrf
+  - - gnb:amf
+    - amf:amf
+  - - nr-ue:gnb
+    - gnb:gnb
