--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4,12 +4,16 @@ applications:
     charm: ./oai-nrf-operator/nrf.charm
     scale: 1
     trust: true
+    options:
+      start-tcpdump: true
     resources:
       oai-nrf-image: rdefosseoai/oai-nrf:v1.1.0
       tcpdump-image: corfr/tcpdump:latest
   amf:
     charm: ./oai-amf-operator/amf.charm
     trust: true
+    options:
+      start-tcpdump: true
     resources:
       oai-amf-image: rdefosseoai/oai-amf:v1.1.0
       tcpdump-image: corfr/tcpdump:latest
@@ -18,6 +22,8 @@ applications:
     charm: ./oai-smf-operator/smf.charm
     scale: 1
     trust: true
+    options:
+      start-tcpdump: true
     resources:
       oai-smf-image: rdefosseoai/oai-smf:develop
       tcpdump-image: corfr/tcpdump:latest
@@ -25,6 +31,8 @@ applications:
     charm: ./oai-spgwu-tiny-operator/spgwu-tiny.charm
     scale: 1
     trust: true
+    options:
+      start-tcpdump: true
     resources:
       oai-spgwu-tiny-image: rdefosseoai/oai-spgwu-tiny:v1.1.2
       tcpdump-image: corfr/tcpdump:latest
@@ -58,7 +66,11 @@ relations:
     - amf:amf
   - - nrf:nrf
     - spgwu-tiny:nrf
+  - - spgwu-tiny:smf
+    - smf:smf
   - - gnb:amf
     - amf:amf
   - - nr-ue:gnb
     - gnb:gnb
+  - - spgwu-tiny:spgwu
+    - gnb:spgwu
