--- a/oai-nrf-operator/metadata.yaml
+++ b/oai-nrf-operator/metadata.yaml
@@ -4,12 +4,9 @@
 # For a complete list of supported options, see:
 # https://discourse.charmhub.io/t/charm-metadata-v2/3674/15
 name: oai-nrf
-display-name: |
-  TEMPLATE-TODO: fill out a display name for the Charmcraft store
-description: |
-  TEMPLATE-TODO: fill out the charm's description
-summary: |
-  TEMPLATE-TODO: fill out the charm's summary
+display-name: OAI nrf
+description: OAI nrf
+summary: OAI nrf
 
 containers:
   nrf:
